Implementing tests. But i find the error messages in the tests are more logical now I'm going to change the service part.